[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/bouncy_mushroom.png" type="Texture" id=1]
[ext_resource path="res://src/BouncyMush.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/bounce1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/bounce2.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/bounce3.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.125, 4.75 )

[node name="BouncyMush" type="Sprite"]
z_index = -2
texture = ExtResource( 1 )
script = ExtResource( 2 )
bounce_factor = 370.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="BounceSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BounceSfx2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BounceSfx3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
